# bot

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: auto-tag.yml  headless-docker.yml
sast-triage-ts/: .gitignore  package-lock.json  package.json
sast-triage-ts/specs/: 2026-04-07-file-context-memory-design.md
sast-triage-ts/src/: config.ts  index.ts  logger.ts  orchestrator.ts  tracing.ts
sast-triage-ts/tests/: integration.test.ts  orchestrator.test.ts
sast_triage/: __init__.py  cli.py  models.py  parser.py  pipeline.py  prefilter.py
sast_triage/context/: AGENTS.md  assembler.py  code_extractor.py  framework_kb.py
sast_triage/llm/: AGENTS.md  client.py  prompts.py
sast_triage/memory/: store.py
sast_triage/tui/: AGENTS.md  app.py  config.py  messages.py  orchestrator.py  tui.tcss
scripts/: compare-baseline.ts
specs/: 2026-04-29-read-efficiency-impl-spec.md  2026-04-29-read-efficiency-techniques.md  2026-04-29-triage-perf-and-tool-use.md
src/: bun.d.ts  config.ts  index.ts  logger.ts  orchestrator.ts
src/agent/: follow-up.ts  loop.ts  system-prompt.ts
src/cli/: cli.ts  config.ts  (+1 more)
tests/: config-resolution.test.ts  conftest.py  index-smoke.test.ts  integration-graph.test.ts  integration.test.ts  orchestrator.test.ts  test_assembler.py  test_cli.py  test_code_extractor.py  test_integration.py  test_llm_client.py  test_memory.py  test_parser.py  test_pipeline.py  test_prefilter.py  test_tui_config.py  test_tui_orchestrator.py  test_tui_widgets.py
(+165 files in other folders)
