[project]
name = "sast-triage"
version = "0.1.0"
description = "Intelligent Semgrep finding triage: deterministic context assembly + LLM verdict"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "pydantic>=2.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
tui = ["textual>=8.0.0"]

[project.scripts]
sast-triage = "sast_triage.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
